scripts/nullness/annotator/url0bbb975254_maxime_collin_mediatheque_tgz-pJ8-test_MainJ8.txt
../annotator/url0bbb975254_maxime_collin_mediatheque_tgz-pJ8-test_MainJ8/src/utilisateurs/Enseignant.java:48: error: [dereference.of.nullable] dereference of possibly-null reference this.NotificationEmprunts
		if(!this.NotificationEmprunts.contains(emprunt))
		        ^
../annotator/url0bbb975254_maxime_collin_mediatheque_tgz-pJ8-test_MainJ8/src/scolarite/Cours.java:66: error: [assignment] incompatible types in assignment.
		this.prof = prof;
		            ^
  found   : @Initialized @Nullable Enseignant
  required: @Initialized @NonNull Enseignant
../annotator/url0bbb975254_maxime_collin_mediatheque_tgz-pJ8-test_MainJ8/src/scolarite/Projet.java:22: error: [assignment] incompatible types in assignment.
		etudiants = e;
		            ^
  found   : @Initialized @Nullable ArrayList<@Initialized @NonNull Etudiant>
  required: @Initialized @NonNull ArrayList<@Initialized @NonNull Etudiant>
../annotator/url0bbb975254_maxime_collin_mediatheque_tgz-pJ8-test_MainJ8/src/utilisateurs/Etudiant.java:34: error: [dereference.of.nullable] dereference of possibly-null reference empruntConcerne
		empruntConcerne.setCommentaire(com);
		^
4 errors
